<resources>
    <string name="app_name">FirebaseDemo</string>
    <string name="dont_have_account">Don\'t have account</string>
    <string name="login">Login</string>
    <string name="sign_up">SignUp</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="conifrm">Confirm Password</string>

    <string name="number">phone</string>
    <string name="password">Password</string>
</resources>